# prime-bus-factor

./: pyproject.toml
prime_bus_factor/: args.py  bus_factor.py
prime_bus_factor/args/: __init__.py  busFactorArgs.py  graphArgs.py
