[tool.poetry]
name = "prime-bus-factor"
version = "0.1.0"
description = ""
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"
packages = [{include = "prime_bus_factor"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
pandas = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
